# malkmusl-game-engine

./: Cargo.toml  README.md  Unbenanntes Diagramm.drawio  build.sh
docs/: exitcodes.md
docs/create/malkmusl_game_engine/: all.html  fn.main.html  index.html  macro.get_current_time!.html  macro.get_current_time.html  macro.logger_error.html  macro.logger_info.html  macro.logger_message!.html  macro.logger_message.html  macro.logger_warn.html  sidebar-items.js
docs/create/malkmusl_game_engine/engine/: index.html  sidebar-items.js
docs/create/malkmusl_game_engine/engine/console_logger/: index.html  sidebar-items.js
docs/markdown/: exitcodes.md
src/: main.rs
src/assets/: basemap.ron
src/assets/maps/: test.ron
src/assets/maps/test/: layer_0.ron
src/assets/maps/twinleaf_town/: layer_0.ron
src/assets/pokemon/: blank.ron
src/engine/: mod.rs
src/engine/assets_loader/: loader.rs  mod.rs  texture_atlas.rs  texture_loader.rs  texture_tilesets.rs
src/engine/console_logger/: Logger.rs  logger.rs  macros.rs  mod.rs
src/engine/core/: metadata.rs  mod.rs
src/engine/core/app/: mod.rs
src/engine/core/consoleLogger/: Logger.rs  macros.rs
src/engine/core/entity/: entity.rs  mod.rs  npc.rs  player.rs
src/engine/core/renderer/: mod.rs
src/engine/core/time/: macros.rs
src/engine/core/world/: map_gen.rs
src/game/: mod.rs
src/game/pokedex/: mod.rs
src/game/pokedex/regional_dex/: kanto_dex.rs  mod.rs
src/game/pokemon/: pokemon.rs  pokemon_attacks.rs  pokemon_data.rs  pokemon_lang.rs  pokemon_misc.rs  pokemon_sprites.rs  pokemon_stats.rs
src/game/pokemon/data/: kanto.rs  template.rs
src/game/pokemon/parser/: stats_paser.rs
(+97 files in other folders)
