[package]
name = "malkmusl-game-engine"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
description= "A simple Rust Game Engine Supporting OpenGL and Vulkan"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local_glium = { path = "../../glium" }
glutin = "*"
glium = "0.32.1"
winit = "*"
vulkano = "0.33.0"
rand = "*"
image = "*"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
na = "0.32.2"
